Fix some nav issues finish twitter page start snap

--- a/about-social.html
+++ b/about-social.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li>
 									<a href="#"> Information Safety </a>
 									<ul>
@@ -43,8 +43,21 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="about-social.html"> About Social Media </a></li>
-								<li><a href="right-sidebar.html"> Something Here</a></li>
+								<li class="current"><a href="about-social.html"> About Social Media </a></li>
+								<li>
+									<a href="twitter-getting-started.html"> Twitter : Getting Started</a>
+									<ul>
+										<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
+										<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="snapchat-getting-started.html"> Snapchat : Getting Started</a>
+									<ul>
+										<li><a href="snapchat-getting-started.html#definitions">Features and Definitions</a></li>
+										<li><a href="snapchat-getting-started.html#download">Getting Snapchat</a></li>
+									</ul>
+								</li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
