--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
 									</ul>
 								</li>
 								<li><a href="about-social.html"> About Social Media </a></li>
-								<li><a href="right-sidebar.html"> Something Here</a></li>
+								<li>
+									<a href="twitter-getting-started.html"> Twitter : Getting Started</a>
+									<ul>
+										<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
+										<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="snapchat-getting-started.html"> Snapchat : Getting Started</a>
+									<ul>
+										<li><a href="snapchat-getting-started.html#definitions">Features and Definitions</a></li>
+										<li><a href="snapchat-getting-started.html#download">Getting Snapchat</a></li>
+									</ul>
+								</li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
