--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TBD website title</title>
+		<title>S.I.S.A.P.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,55 +18,40 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html"> Information Sciences Project</a></h1>
+						<h1><a href="index.html"> S.I.S.A.P.</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#"> Information Safety </a>
+									<a href="getstart.html"> Getting Started Guides </a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
+											<a href="twitter-getting-started.html">Twitter: Getting Started</a>
 											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
+												<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
+												<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="snapchat-getting-started.html">Snapchat: Getting Started</a>
+											<ul>
+												<li><a href="snapchat-getting-started.html#definitions">Features and Definitions</a></li>
+												<li><a href="snapchat-getting-started.html#download">Getting Snapchat</a></li>
+											</ul>
+										</li>
 									</ul>
 								</li>
 								<li><a href="about-social.html"> About Social Media </a></li>
-								<li>
-									<a href="twitter-getting-started.html"> Twitter : Getting Started</a>
-									<ul>
-										<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
-										<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="snapchat-getting-started.html"> Snapchat : Getting Started</a>
-									<ul>
-										<li><a href="snapchat-getting-started.html#definitions">Features and Definitions</a></li>
-										<li><a href="snapchat-getting-started.html#download">Getting Snapchat</a></li>
-									</ul>
-								</li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="GIS.html">General – Information Science</a></li>
 							</ul>
 						</nav>
 
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2> Welcome to Our Project</h2>
-								<p>A resource for learning about the protection of your information online!</p>
+								<h2> The Stanford Information Sciences Accessibility Project</h2>
+								<p>A resource for learning about the Information sciences ranging from what it is to how it shows up in social media and beyond!</p>
 							</header>
 						</section>
 
@@ -75,36 +60,36 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="icon solid featured fa-cog"></i>
+										<i class="icon solid featured fa-globe"></i>
 										<header>
-											<h2>Ipsum consequat</h2>
+											<h2>Information Science</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>We want to teach you information science in an easy to understand manner!</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<i class="icon solid featured alt fa-bolt"></i>
+										<i class="icon solid featured alt2 fal fa-key"></i>
 										<header>
-											<h2>Magna etiam dolor</h2>
+											<h2>Information Safety</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>We want you to learn why it's important to protect yourself and your information online!</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
-										<i class="icon solid featured alt2 fa-star"></i>
+										<i class="icon solid featured fad fa-briefcase"></i>
 										<header>
-											<h2>Tempus adipiscing</h2>
+											<h2>Information Skills</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>We'd also like you to be able to share the knowledge you learn here and be able to use it to help others as well!</p>
 									</section>
 								</div>
 							</div>
 							<footer>
 								<ul class="actions">
-									<li><a href="#" class="button large">Get Started</a></li>
-									<li><a href="#" class="button alt large">Learn More</a></li>
+									<li><a href="index.html#main" class="button large">Get Started with Articles</a></li>
+									<li><a href="index.html#vids" class="button alt large">Get Started with Videos</a></li>
 								</ul>
 							</footer>
 						</section>
@@ -125,25 +110,25 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/twitpic.png" alt="" /></a>
 													<header>
-														<h3>Ipsum feugiat et dolor</h3>
+														<h3>Twitter: Getting Started</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Some usefull tips and tricks as well as how to download.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="twitter-getting-started.html" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="snapchat-getting-started.html" class="image featured"><img src="images/snappic.jpg" alt="" /></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>Snapchat: Getting Started</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Some usefull tips and tricks as well as how to download.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -214,23 +199,23 @@
 							<div class="col-12">
 
 								<!-- Blog -->
-									<section>
+									<section id="vids">
 										<header class="major">
 											<h2>Quick Access Videos</h2>
 										</header>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/Thumbnail.png" alt="" /></a>
 													<header>
-														<h3>Magna tempus consequat</h3>
-														<p>Posted 45 minutes ago</p>
+														<h3>What is Information Science?</h3>
+														<p>Posted A While Ago</p>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>Short video delving into what information science is!</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
+															<li><a href="#" class="button icon solid fa-file-alt">Continue To Video</a></li>
+															<li><a href="#" class="button alt icon solid fa-comment">0 comments</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -266,33 +251,28 @@
 							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h2>Blandit nisl adipiscing</h2>
+										<h2>Project Timeline</h2>
 									</header>
 									<ul class="dates">
 										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
+											<span class="date">Jun <strong>21</strong></span>
+											<h3><a href="#">Project Start Date</a></h3>
+											<p>First official week we started the project.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
+											<span class="date">August <strong>10</strong></span>
+											<h3><a href="#">High Schoolers End Their Work</a></h3>
+											<p>The last day of the STEM to SHTEM program for the high schoolers working with us.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
+											<span class="date">August <strong>27</strong></span>
+											<h3><a href="#">Project End Date</a></h3>
+											<p>Official last day of working on the project for everyone.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
+											<span class="date">TBD <strong>?</strong></span>
+											<h3><a href="#">Up Next</a></h3>
+											<p>Yet to be seen what is nect for the project! Stay Tuned!</p>
 										</li>
 									</ul>
 								</section>
@@ -302,11 +282,12 @@
 									<header>
 										<h2>What's this all about?</h2>
 									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/stanpic.jpg" alt="" /></a>
 									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
+										This is a website with materials put together by a team of Stanford undergrads, a Stanford grad student, and some high school students in program called STEM to SHTEM.
+										This was all a collobarative effort with the purpose to educate many about information scienes and how it pops up in the most common ways such as in social media.
+										We as a result also wanted to teach information safety and how to use certain social media sites for those who also need help with them.
+
 									</p>
 									<footer>
 										<ul class="actions">
@@ -318,37 +299,40 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<section>
 									<header>
-										<h2>Tempus consequat</h2>
+										<h2>Contributors</h2>
 									</header>
 									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
+										<li><a href="#">Alexander Kong - HS Student c/o 21</a></li>
+										<li><a href="#">Anna Fisher - HS Student c/o 21</a></li>
+										<li><a href="#">Barry Migot - Stanford Undergrad c/o 23</a></li>
+										<li><a href="#">Denny Woong - Stanford Undergrad c/o 24</a></li>
+										<li><a href="#">Hannah Yousuf - HS Student c/o 21</a></li>
+										<li><a href="#">Isabella Coenen - HS Student c/o 21</a></li>
+										<li><a href="#">Kevin Bachelor - HS Student c/o 21</a></li>
+										<li><a href="#">Marc Huerta - Stanford Undergrad c/o 23</a></li>
+										<li><a href="#">Meher Brar - HS Student c/o 21</a></li>
+										<li><a href="#">Noah Uffman - Stanford Grad Student</a></li>
+										<li><a href="#">Tsachy Weissman - Stanford EE Prof & PI of project</a></li>
+										
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<section>
 									<header>
-										<h2>Ipsum et phasellus</h2>
+										<h2>Special Thanks</h2>
 									</header>
 									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
+										<li><a href="#">EE Dept & REU Program</a></li>
+										<li><a href="#">STEM to SHTEM</a></li>
+										<li><a href="#">Tsachy Weissman</a></li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2>Vitae tempor lorem</h2>
+										<h2>Social Media Links</h2>
 									</header>
 									<ul class="social">
 										<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
@@ -361,18 +345,14 @@
 										<li>
 											<h3>Address</h3>
 											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
+												Stanford University<br />
+												450 Serra Mall<br />
+												Stanford, CA 94305
 											</p>
 										</li>
 										<li>
 											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
+											<p><a href="#">stanfordsummerresearch21@gmail.com</a></p>
 										</li>
 									</ul>
 								</section>
@@ -382,7 +362,7 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Stanford EE Dept. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
