--- a/snapchat-getting-started.html
+++ b/snapchat-getting-started.html
@@ -6,59 +6,44 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>S.I.S.A.P.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Information Sciences Project</a></h1>
+						<h1><a href="index.html"> S.I.S.A.P.</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
+								<li class="current">
+									<a href="getstart.html"> Getting Started Guides </a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
+											<a href="twitter-getting-started.html">Twitter: Getting Started</a>
 											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
+												<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
+												<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="snapchat-getting-started.html">Snapchat: Getting Started</a>
+											<ul>
+												<li><a href="snapchat-getting-started.html#definitions">Features and Definitions</a></li>
+												<li><a href="snapchat-getting-started.html#download">Getting Snapchat</a></li>
+											</ul>
+										</li>
 									</ul>
 								</li>
 								<li><a href="about-social.html"> About Social Media </a></li>
-								<li>
-									<a href="twitter-getting-started.html"> Twitter : Getting Started</a>
-									<ul>
-										<li><a href="twitter-getting-started.html#definitions">Features and Definitions</a></li>
-										<li><a href="twitter-getting-started.html#download">Getting Twitter</a></li>
-									</ul>
-								</li>
-								<li class="current">
-									<a href="snapchat-getting-started.html"> Snapchat : Getting Started</a>
-									<ul>
-										<li><a href="#definitions">Features and Definitions</a></li>
-										<li><a href="#download">Getting Snapchat</a></li>
-									</ul>
-								</li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="GIS.html">General – Information Science</a></li>
 							</ul>
 						</nav>
 
@@ -70,7 +55,7 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/snappic.jpg" alt="" /></a>
 								<header>
 									<h2>Get Started with Snapchat</h2>
 									<p>Some usefull tips and tricks as well as how to download</p>
@@ -149,6 +134,10 @@
 									<header>
 										<h3 id="download">How to set up a Snapchat: Step by Step </h3>
 									</header>
+									<div class="ifrmae-container">
+										<iframe width="1080" height="600" src="https://www.youtube.com/embed/AEimcndIYjM" title="YouTube video player" frameborder="0" 
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
 									<p>
 										<b>Step 1:</b> Download Snapchat from you mobile device 
 									</p>
@@ -188,138 +177,133 @@
 				</section>
 
 			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
-								<section>
-									<header>
-										<h2>Blandit nisl adipiscing</h2>
-									</header>
-									<ul class="dates">
-										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>What's this all about?</h2>
-									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-									</p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
-										</ul>
-									</footer>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Tempus consequat</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Ipsum et phasellus</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>Vitae tempor lorem</h2>
-									</header>
-									<ul class="social">
-										<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
-									</ul>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
-											</p>
-										</li>
-										<li>
-											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-12">
+			<section id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-8 col-12-medium">
+							<section>
+								<header>
+									<h2>Project Timeline</h2>
+								</header>
+								<ul class="dates">
+									<li>
+										<span class="date">Jun <strong>21</strong></span>
+										<h3><a href="#">Project Start Date</a></h3>
+										<p>First official week we started the project.</p>
+									</li>
+									<li>
+										<span class="date">August <strong>10</strong></span>
+										<h3><a href="#">High Schoolers End Their Work</a></h3>
+										<p>The last day of the STEM to SHTEM program for the high schoolers working with us.</p>
+									</li>
+									<li>
+										<span class="date">August <strong>27</strong></span>
+										<h3><a href="#">Project End Date</a></h3>
+										<p>Official last day of working on the project for everyone.</p>
+									</li>
+									<li>
+										<span class="date">TBD <strong>?</strong></span>
+										<h3><a href="#">Up Next</a></h3>
+										<p>Yet to be seen what is nect for the project! Stay Tuned!</p>
+									</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-12-medium">
+							<section>
+								<header>
+									<h2>What's this all about?</h2>
+								</header>
+								<a href="#" class="image featured"><img src="images/stanpic.jpg" alt="" /></a>
+								<p>
+									This is a website with materials put together by a team of Stanford undergrads, a Stanford grad student, and some high school students in program called STEM to SHTEM.
+									This was all a collobarative effort with the purpose to educate many about information scienes and how it pops up in the most common ways such as in social media.
+									We as a result also wanted to teach information safety and how to use certain social media sites for those who also need help with them.
 
-								<!-- Copyright -->
-									<div id="copyright">
-										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
+								</p>
+								<footer>
+									<ul class="actions">
+										<li><a href="#" class="button">Find out more</a></li>
+									</ul>
+								</footer>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section>
+								<header>
+									<h2>Contributors</h2>
+								</header>
+								<ul class="divided">
+									<li><a href="#">Alexander Kong - HS Student c/o 21</a></li>
+									<li><a href="#">Anna Fisher - HS Student c/o 21</a></li>
+									<li><a href="#">Barry Migot - Stanford Undergrad c/o 23</a></li>
+									<li><a href="#">Denny Woong - Stanford Undergrad c/o 24</a></li>
+									<li><a href="#">Hannah Yousuf - HS Student c/o 21</a></li>
+									<li><a href="#">Isabella Coenen - HS Student c/o 21</a></li>
+									<li><a href="#">Kevin Bachelor - HS Student c/o 21</a></li>
+									<li><a href="#">Marc Huerta - Stanford Undergrad c/o 23</a></li>
+									<li><a href="#">Meher Brar - HS Student c/o 21</a></li>
+									<li><a href="#">Noah Uffman - Stanford Grad Student</a></li>
+									<li><a href="#">Tsachy Weissman - Stanford EE Prof & PI of project</a></li>
+									
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section>
+								<header>
+									<h2>Special Thanks</h2>
+								</header>
+								<ul class="divided">
+									<li><a href="#">EE Dept & REU Program</a></li>
+									<li><a href="#">STEM to SHTEM</a></li>
+									<li><a href="#">Tsachy Weissman</a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-12-medium">
+							<section>
+								<header>
+									<h2>Social Media Links</h2>
+								</header>
+								<ul class="social">
+									<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
+									<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
+									<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
+									<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
+									<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+								</ul>
+								<ul class="contact">
+									<li>
+										<h3>Address</h3>
+										<p>
+											Stanford University<br />
+											450 Serra Mall<br />
+											Stanford, CA 94305
+										</p>
+									</li>
+									<li>
+										<h3>Mail</h3>
+										<p><a href="#">stanfordsummerresearch21@gmail.com</a></p>
+									</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-12">
 
-							</div>
+							<!-- Copyright -->
+								<div id="copyright">
+									<ul class="links">
+										<li>&copy; Stanford EE Dept. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									</ul>
+								</div>
+
 						</div>
 					</div>
-				</section>
+				</div>
+			</section>
 
-		</div>
+	</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
