--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/Thumbnail.png" alt="" /></a>
+													<a href="GIS.html" class="image featured"><img src="images/Thumbnail.png" alt="" /></a>
 													<header>
 														<h3>What is Information Science?</h3>
 														<p>Posted A While Ago</p>
@@ -214,7 +214,7 @@
 													<p>Short video delving into what information science is!</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button icon solid fa-file-alt">Continue To Video</a></li>
+															<li><a href="GIS.html" class="button icon solid fa-file-alt">Continue To Video</a></li>
 															<li><a href="#" class="button alt icon solid fa-comment">0 comments</a></li>
 														</ul>
 													</footer>
