--- a/WTTJ.html
+++ b/WTTJ.html
@@ -42,8 +42,8 @@
 										</li>
 									</ul>
 								</li>
-								<li class="current"><a href="about-social.html"> About Social Media </a></li>
-								<li><a href="WTTJ.html"> Welcome to the Jungle (comic)</a></li>
+								<li><a href="about-social.html"> About Social Media </a></li>
+								<li class="current"><a href="WTTJ.html"> Welcome to the Jungle (comic)</a></li>
 								<li><a href="GIS.html">General – Information Science</a></li>
 							</ul>
 						</nav>
@@ -58,13 +58,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="#" class="image featured"><img src="images/socialmoney.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/WTTJ.jpg" alt="" /></a>
 										<header>
-											<h3>How Wesbites Make Money</h3>
+											<h3>Parent Guide For WttJ!</h3>
 										</header>
-										<p>Learn about the profit model that leads to social media platforms making profit off of your personal information.</p>
+										<p>Get a better insight into the purpose and message behind our comic!</p>
 										<footer>
-											<a href="website-money.html" class="button alt">Go now!</a>
+											<a href="pgWttJ.html" class="button alt">Go now!</a>
 										</footer>
 									</section>
 									<section class="box">
@@ -87,41 +87,22 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/peepphone.jpg" alt="" /></a>
 										<header>
-											<h2>About Social Media</h2>
-											<p>What is There to Learn About Soical Media?</p>
+											<h2>Welcome to the Jungle (a short comic)</h2>
+											<p>Scroll below to find the full comic!</p>
 										</header>
 										<p>
-											Social media platforms have taken over the world. Sites like Facebook have transcended from simple
-											social websites, to instead huge companies that have stake in various things aside from just being a site
-											where people can interact. Facebook has many additonal features like Facebook Marketplace, Instagram has an in-app 
-											shop where it encourages you to buy clothes from different brands and pages, and Snapchat allows you to buy outfits 
-											for your Snapchat "Bitmoji". Many of these companies and sites seek ways to be profitable and make the most money but
-											as free to use sites and platforms, how do they in fact make most of their money?
+											Comic Here
 										</p>
 										<p>
 											Learn more by clicking on the sidebars or simply reading down more as well!
 										</p>
 										<section>
 											<header>
-												<h3>How Website and Platforms Make Money</h3>
-											</header>
-											<p>
-												The real danger of social media is in their profit model. When you use social media, you are how they make money. 
-												By this I mean, they actually are able to sell ads on their wesbites to advertisers based on how many users they have
-												and with the data they have, they can make even more money through a thing called "targeted adevrtising" which targets 
-												certain demographics based on the data they collect from you which they can use themselves to better sell ads and make
-												more money. You can learn about this in our video and transcript we made that is attached on the sidebar!
-											</p>
-
-										</section>
-										<section>
-											<header>
 												<h3>So in conclusion ...</h3>
 											</header>
 											<p>
-
+												
 											</p>
 										</section>
 									</article>
