--- a/getstart.html
+++ b/getstart.html
@@ -43,6 +43,7 @@
 									</ul>
 								</li>
 								<li><a href="about-social.html"> About Social Media </a></li>
+								<li><a href="WTTJ.html"> Welcome to the Jungle (comic)</a></li>
 								<li><a href="GIS.html">General – Information Science</a></li>
 							</ul>
 						</nav>
