--- a/twitter-getting-started.html
+++ b/twitter-getting-started.html
@@ -20,7 +20,7 @@
 		<section id="header">
 
 			<!-- Logo -->
-			<h1><a href="index.html"> S.I.S.A.P.</a></h1>
+			<h1><a href="index.html"> REU project </a></h1>
 
 			<!-- Nav -->
 			<nav id="nav">
